--- a/public/create/index.html
+++ b/public/create/index.html
@@ -43,7 +43,7 @@
 					<button type="submit" class="button registration-button">Register</button>
 					<div id="registration-tos-container">
 						<!-- TODO: insert correct link to Terms of Service -->
-						I agree to the <a target="_blank" href="http://talk.scripler.com/t/official-scripler-faq/109">terms of service</a> <input id="tos" type="checkbox" data-ng-model="tos" required>
+						 <input id="tos" type="checkbox" data-ng-model="tos" required> I agree to the <a target="_blank" href="http://talk.scripler.com/t/official-scripler-faq/109">terms of service</a>
 					</div>
 				</form>
 			</div>
