Trimming the unisquare
fixes #1063

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -15,7 +15,7 @@
 		<div data-ng-hide="showSettings">
 			<div class="clearfix">
 				<a href="http://{{frontpage}}" target="_self" class="frontpage-link">
-					<span>Frontpage</span>
+					<span>Go to frontpage</span>
 				</a>
 			</div>
 			<div class="logo-box">
