--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -109,7 +109,7 @@
 							<!--<div class="style-options-menupoint" data-ng-click="archiveStyle(style); hideStylesetOptions();">archive</div>-->
 						</div>
 					</li>
-					<li class="new style" data-ng-click="addNewStyle( styleset )"><p>+</p></li>
+					<!-- <li class="new style" data-ng-click="addNewStyle( styleset )"><p>+</p></li> -->
 				</ul>
 			</li>
 		</ul>
