--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -87,7 +87,7 @@
 		<div class="section-projects">
 
 
-			<div data-ng-class="getNewProjectClass()" data-ng-click="addProject();"></div>
+			<div data-ng-class="getNewProjectClass()" data-ng-click="getNewProjectHandler();"></div>
 			<div class="project clearfix" data-ng-animate="'animate'" data-ng-class="{ 'archived' : project.archived, 'downgraded' : !canLoadProject(project) }" data-ng-hide="project.archived && !user.showArchived" data-ng-repeat="project in projects track by $index" data-ng-mouseenter="showProjectTitle($index)" data-ng-mouseleave="hideProjectTitle()">
 				<a data-ng-class="{ 'project-options-show' : canLoadProject(project)}" data-ng-class="{ 'open' : $index == selectedProjectOptions }" data-ng-click="showProjectOptions($index)">
 					<div class="arrow"></div>
@@ -118,7 +118,7 @@
 					<div class="project-options-menupoint" data-ng-hide="project.archived" data-ng-click="archiveProject(project); hideProjectOptions();">archive</div>
 					<div class="project-options-menupoint" data-ng-show="project.archived" data-ng-click="deleteProject(project, $index); hideProjectOptions();">delete</div>
 				</div>
-				<div class="project-link downgraded-helptext" data-ng-hide="canLoadProject(project) || $index != selectedProjectHover">
+				<div class="project-link downgraded-helptext" data-ng-hide="canLoadProject(project) || $index != selectedProjectHover" data-ng-click="upgrade();">
 					Upgrade to Premium to unlock this book
 				</div>
 			</div>
