--- a/public/index.html
+++ b/public/index.html
@@ -153,12 +153,12 @@
                 <div class="features-left">
                     <img src="images/features/free.png" class="pull-left">
                     <h3>It’s free</h3>
-                    <p>With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</p>
+                    <p>It is free to create books with Scripler. As a Free user there is a limit on how many books you can store and work on: Three projects at a time. There are no surprising fees and Scripler does not take any cuts from whatever proceeds you get from selling your book.</p>
                 </div>
                 <div class="features-right">
                     <img src="images/features/premium.png" class="pull-left">
-                    <h3>Premium subscription for heavy users and professionals</h3>
-                    <p>As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</p>
+                    <h3>Premium subscription for heavy users</h3>
+                    <p>Premium is for the user who plans on working on more books and who wants more control over the design of the book. The Premium plan is a monthly paid subscription of $9.99 that gives you more space for books and more freedom to change and customize the design of your book.</p>
                 </div>
                 <div class="features-left">
                     <img src="images/features/ebook.png" class="pull-left">
@@ -167,13 +167,18 @@
                 </div>
                 <div class="features-right">
                     <img src="images/features/togd.png" class="pull-left">
-                    <h3 class="feats">Great typography and design</h3>
+                    <h3>Great typography and design</h3>
                     <p>Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</p>
                 </div>
                 <div class="features-left">
                     <img src="images/features/import.png" class="pull-left">
                     <h3>Import</h3>
                     <p>Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</p>
+                </div>
+                <div class="features-right">
+                    <img src="images/features/internet.png" class="pull-left">
+                    <h3>Direct publish to the web</h3>
+                    <p>Share your work immediately by publishing to the web - directly from the Scripler. Anyone with the link can read your book in the browser using the Scripler reader. And if you make changes to your book, simply update to the latest version. You can even embed your book on any page like you would a Youtube video.</p>
                 </div>
         </div>
     </div>
