Implemented review comment, added separator in dropdown, and added proper selection geoguessed Non-EU country.

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -145,7 +145,8 @@
 							<option value="FI">Finland</option>
 							<option value="SE">Sweden</option>
 							<option value="UK">United Kingdom</option>
-							<option value="?">Non-EU</option>
+							<option disabled>──────────</option>
+							<option value="?">Outside EU</option>
 						</select>
 					</p>
 					<p>
