Implemented invoice template (including vat)

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -117,10 +117,36 @@
 					<span><p class="top-text-card">Billing country</p></span>
 					<p class="input-label">
 						<select id="billingCountry" ng-model="payment.billingCountryCode" class="billingCountry">
+							<option value="AT">Austria</option>
+							<option value="BE">Belgium</option>
+							<option value="BG">Bulgaria</option>
+							<option value="HR">Croatia</option>
+							<option value="CY">Cyprus</option>
+							<option value="CZ">Czech Republic</option>
 							<option value="DK">Denmark</option>
+							<option value="EE">Estonia</option>
+							<option value="FI">Finland</option>
+							<option value="FR">France</option>
 							<option value="DE">Germany</option>
-							<option value="NO">Norway</option>
-							<option value="?" class="fadedOption">Non-EU</option>
+							<option value="EL">Greece</option>
+							<option value="HU">Hungary</option>
+							<option value="IE">Ireland</option>
+							<option value="IT">Italy</option>
+							<option value="LV">Latvia</option>
+							<option value="LT">Lithuania</option>
+							<option value="LU">Luxembourg</option>
+							<option value="MT">Malta</option>
+							<option value="NL">Netherlands</option>
+							<option value="PL">Poland</option>
+							<option value="PT">Portugal</option>
+							<option value="RO">Romania</option>
+							<option value="ES">Spain</option>
+							<option value="SE">Sweden</option>
+							<option value="SK">Slovakia</option>
+							<option value="SI">Slovenia</option>
+							<option value="UK">United Kingdom</option>
+							<option disabled>──────────</option>
+							<option value="?">Outside EU</option>
 						</select>
 					</p>
 					<p>
