--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -136,23 +136,15 @@
 				<div class="left-menu-options">
 
 					<form name="insertHyperlinks" class="insertHyperlinks" novalidate>
+						<span class="menu-box inputfield margin-top">
+							<input id="linkText" type="text" data-ng-model="linkText" placeholder="Text" required>
+						</span>
 						<span class="menu-box inputfield">
-							<!-- Morten's comments: Since our experiments and a bit of Googling showed that it is 
-							apparently (https://github.com/angular/angular.js/issues/5226) not possible to store the 
-							regex in the JavaScript code (controller) (this trick: http://stackoverflow.com/questions/17384909/directive-to-dynamically-create-an-ng-pattern 
-							only worked partially: error message was not shown for URLs like "ydyfuyydufdf"), we should at least add a comment 
-							explaining that this regex is the same as the one being used in project_controller.js (https://github.com/Scripler/scripler/blob/beta1/public/create/scripts/project_controller.js#L1610). -->
-							<input id="hyperlinkTarget" name="hyperlinkTarget" type="text" data-ng-model="linkAddress" ng-pattern="/doc_.|^((https?):\/\/)?([w|W]{3}\.)*[a-zA-Z0-9\-\.]{1,}\.[a-zA-Z]{1,}(\.[a-zA-Z]{2,})?$/" placeholder="Target" required>
+							<input id="linkAddress" type="text" data-ng-model="linkAddress" data-ng-change="linkAddressChanged()" placeholder="External link" />
 						</span>
-						<div role="alert">
-							<span class="nameError urlError" ng-show="insertHyperlinks.$submitted && insertHyperlinks.hyperlinkTarget.$error.pattern && !insertHyperlinks.hyperlinkTarget.$untouched">Not a valid URL</span>
-						</div>
-						<span class="menu-box inputfield margin-top">
-							<input id="hyperlinkInputBox" name="hyperlinkInputBox" type="text" data-ng-model="linkText" placeholder="Text" required>
-						</span>
-						<span class="menu-box inputfield margin-top">
-							<select data-ng-model="linkAnchor" data-ng-options="anchor.text for anchor in toc">
-								<option value="">Choose internal target</option>
+						<span class="menu-box inputfield">
+							<select id="linkAnchor" data-ng-model="linkAnchor" data-ng-change="linkAnchorChanged()" data-ng-options="anchor.text for anchor in toc">
+								<option value="">or Choose internal target</option>
 							</select>
 						</span>
 						<input type="submit" value="Insert hyperlink" class="button margin-top" data-ng-click="insertNewLink();">
