Last minute changes

--- a/public/index.html
+++ b/public/index.html
@@ -163,12 +163,12 @@
                 <div class="features-left">
                     <img src="images/features/ebook.png" class="pull-left">
                     <h3>Fully functional ebooks</h3>
-                    <p>Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</p>
+                    <p>Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book template you currently use.</p>
                 </div>
                 <div class="features-right">
                     <img src="images/features/togd.png" class="pull-left">
                     <h3>Great typography and design</h3>
-                    <p>Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</p>
+                    <p>Make professionally designed typography with Scripler’s book templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</p>
                 </div>
                 <div class="features-left">
                     <img src="images/features/import.png" class="pull-left">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="features-right">
                     <img src="images/features/internet.png" class="pull-left">
-                    <h3>Direct publish to the web</h3>
+                    <h3>Publish directly to the web</h3>
                     <p>Share your work immediately by publishing to the web - directly from the Scripler. Anyone with the link can read your book in the browser using the Scripler reader. And if you make changes to your book, simply update to the latest version. You can even embed your book on any page like you would a Youtube video.</p>
                 </div>
         </div>
@@ -198,7 +198,7 @@
             <h2>Premium</h2>
             <p>10 ebook projects</p>
             <p>17 ebook design templates</p>
-            <h3>$9.99/month</h3>
+            <h3>€9.99/month</h3>
           </div>
           <div class="planChoice" id="proPlan">
             <h2>Professional</h2>
