--- a/public/create/index.html
+++ b/public/create/index.html
@@ -73,7 +73,7 @@
 				<h1>Premium</h1>
 				<p>{{ premiumNumberOfEbooks }} ebook projects</p>
 				<p>{{ premiumNumberOfDesigns }} ebook design templates</p>
-				<h2>${{ premiumMonthlyPrice }}/month</h2>
+				<h2>€{{ premiumMonthlyPrice }}/month</h2>
 				<a class="modalButtons" id="usePremium" ng-click="usePremium()">{{ usePremiumText }}</a>
 			</div>
 
@@ -92,11 +92,11 @@
 			<div class="upgradePayment" id="upgradePayment">
 				<form name="upgradePaymentForm" ng-submit="paymentUpgrade()" novalidate>
 					<h2>Upgrade to Premium</h2>
-					<p class="no-top-margin"><em>Your card will be charged ${{ premiumMonthlyPrice }}/month.</em></p>
+					<p class="no-top-margin"><em>Your card will be charged €{{ premiumMonthlyPrice }}/month.</em></p>
 					<hr>
 					<a target="_blank" href="https://en.wikipedia.org/wiki/HTTPS">
 						<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
-						<span><p class="secure-text">SECURE PAYMENT<br>LEARN MORE</p></span>
+						<span><p class="secure-text">SECURE PAYMENT</p></span>
 					</a>
 					<br>
 					<span><p class="top-text-card">Card number</p></span>
