--- a/public/create/index.html
+++ b/public/create/index.html
@@ -93,10 +93,11 @@
 				<form name="upgradePaymentForm" ng-submit="paymentUpgrade()" novalidate>
 					<h2>Upgrade to Premium</h2>
 					<p class="no-top-margin"><em>Your card will be charged €{{ premiumMonthlyPrice }}/month.</em></p>
+					<p class="no-top-margin-2">Currently only private subscriptions are<br>available. Business customer? <a href="mailto:info@scripler.com">Contact us</a></p>
 					<hr>
-					<a target="_blank" href="https://en.wikipedia.org/wiki/HTTPS">
+					<a target="_blank" href="http://talk.scripler.com/t/official-scripler-faq/109">
 						<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
-						<span><p class="secure-text">SECURE PAYMENT</p></span>
+						<span><p class="secure-text">SECURE<br>PAYMENT</p></span>
 					</a>
 					<br>
 					<span><p class="top-text-card">Card number</p></span>
