Updated the secure payment link

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -95,7 +95,7 @@
 					<p class="no-top-margin"><em>Your card will be charged €{{ premiumMonthlyPrice }}/month.</em></p>
 					<p class="no-top-margin-2">Currently only private subscriptions are<br>available. Business customer? <a href="mailto:info@scripler.com">Contact us</a></p>
 					<hr>
-					<a target="_blank" href="http://talk.scripler.com/t/official-scripler-faq/109">
+					<a target="_blank" href="http://talk.scripler.com/t/official-scripler-faq/109#q8">
 						<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
 						<span><p class="secure-text">SECURE<br>PAYMENT</p></span>
 					</a>
