Implemented review comments

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -144,7 +144,7 @@
 						</span>
 						<span class="menu-box inputfield">
 							<select id="linkAnchor" data-ng-model="linkAnchor" data-ng-change="linkAnchorChanged()" data-ng-options="anchor.text for anchor in toc">
-								<option value="">or Choose internal target</option>
+								<option value="">or choose internal target</option>
 							</select>
 						</span>
 						<input type="submit" value="Insert hyperlink" class="button margin-top" data-ng-click="insertNewLink();">
