Books to ebooks & €

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -79,7 +79,7 @@
 
 			<div class="planChoice" id="proPlan">
 				<h1>Professional</h1>
-				<p>Need more than 10 books?</p>
+				<p>Need more than 10 ebooks?</p>
 				<p>&nbsp;</p>
 				<a href="mailto:info@scripler.com" class="modalButtons" id="usePro">Contact us</a>
 			</div>
