--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
                 <div class="features-right">
                     <img src="images/features/premium.png" class="pull-left">
                     <h3>Premium subscription for heavy users</h3>
-                    <p>Premium is for the user who plans on working on more books and who wants more control over the design of the book. The Premium plan is a monthly paid subscription of $9.99 that gives you more space for books and more freedom to change and customize the design of your book.</p>
+                    <p>Premium is for the user who plans on working on more books and who wants more control over the design of the book. The Premium plan is a monthly paid subscription of €9.99 that gives you more space for books and more freedom to change and customize the design of your book.</p>
                 </div>
                 <div class="features-left">
                     <img src="images/features/ebook.png" class="pull-left">
@@ -202,7 +202,7 @@
           </div>
           <div class="planChoice" id="proPlan">
             <h2>Professional</h2>
-            <p>Need more than 10 books?</p>
+            <p>Need more than 10 ebooks?</p>
             <p>&nbsp;</p>
             <h3><a href="mailto:info@scripler.com">Contact us</a></h3>
           </div>
