--- a/public/index.html
+++ b/public/index.html
@@ -132,8 +132,10 @@
                 <h1>Make ebooks</h1>
                 <h1 class="grey"><em>Scripler is a way to write and publish ebooks.
                 Your books will be beautiful, fully functional and ready for distribution. <span>Oh, and it's free.</span></em></h1>
+                <h3><a href="https://scripler.com/ebook/560e67ea031e6a0e29297af0/SofieMarieOttsen-ABook#epubcfi(/6/2[Cover.html]!4[scripler]/1:0)" target="_blank">View an ebook example</a> 
+                &emsp;
+                <a href="https://youtu.be/YcyZPqLfpyA" target="_blank">How to make an ebook in minutes</a></h3>
                 <div class="row">
-                    <p>&nbsp;</p>
                     <p>&nbsp;</p>
                 </div>
                 <div class="text-center">
