Update links & address

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
                 Your books will be beautiful, fully functional and ready for distribution. <span>Oh, and it's free.</span></em></h1>
                 <h3><a href="https://scripler.com/ebook/560e67ea031e6a0e29297af0/SofieMarieOttsen-ABook#epubcfi(/6/2[Cover.html]!4[scripler]/1:0)" target="_blank">View an ebook example</a> 
                 &emsp;
-                <a href="https://youtu.be/YcyZPqLfpyA" target="_blank">How to make an ebook in minutes</a></h3>
+                <a href="https://vimeo.com/142900638" target="_blank">How to make an ebook in minutes</a></h3>
                 <div class="row">
                     <p>&nbsp;</p>
                 </div>
@@ -267,13 +267,13 @@
                       <p>&nbsp;</p>
                       <p>&nbsp;</p>
                   </div>
-                  <h3>Ask us anything</h3>
+                  <h2>Ask us anything</h2>
                   <h4><a href="mailto:david@scripler.com">David Walther Birk</a> &mdash; Project Lead</h4>
                   <h4><a href="mailto:sofie@scripler.com">Sofie Marie Ottsen</a> &mdash; Press & Media</h4>
                   <div class="row">
                       <p>&nbsp;</p>
                   </div>
-                  <h3>Stay informed</h3>
+                  <h2>Stay informed</h2>
                   <h4>Sign up for our newsletter and you'll get a selection of interesting news from the frontiers of digital publishing and updates on what we’re currently working on at Scripler.</h4>
 
                   <div id="mc_embed_signup">
@@ -309,9 +309,10 @@
                       <p>&nbsp;</p>
                       <p>&nbsp;</p>
                   </div>
-                  <h2>Scripler</h2>
-                  <h2>Danneskiold-Samsøes Alle 41</h2>
-                  <h2>1434 Copenhagen K</h2>
+                  <h2>Scripler IVS</h2>
+                  <h2>Bergmannsvej 40</h2>
+                  <h2>5700 Svendborg</h2>
+                  <h2><a href="mailto:info@scripler.com">info@scripler.com</a></h2>
                 </div>
             </div>
           </div>
