--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
@@ -134,7 +135,7 @@
                 Your books will be beautiful, fully functional and ready for distribution. <span>Oh, and it's free.</span></em></h1>
                 <h3><a href="https://scripler.com/ebook/560e67ea031e6a0e29297af0/SofieMarieOttsen-ABook#epubcfi(/6/2[Cover.html]!4[scripler]/1:0)" target="_blank">View an ebook example</a> 
                 &emsp;
-                <a href="https://vimeo.com/142900638" target="_blank">How to make an ebook in minutes</a></h3>
+                <a href="https://www.youtube.com/watch?v=YcyZPqLfpyA" data-rel="popup-iframe" target="_blank">How to make an ebook in minutes</a></h3>
                 <div class="row">
                     <p>&nbsp;</p>
                 </div>
@@ -321,6 +322,7 @@
   </div>
   <script src="js/vendor/jquery-1.11.2.min.js"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
+  <script src="js/magnific-popup.js"></script>
   <script src="js/frontpage.jquery.js"></script>
   <script src="create/scripts/utils-shared.js"></script>
   <script>
