Updated front page texts for video and example

--- a/public/index.html
+++ b/public/index.html
@@ -133,9 +133,9 @@
                 <h1>Make ebooks</h1>
                 <h1 class="grey"><em>Scripler is a way to write and publish ebooks.
                 Your books will be beautiful, fully functional and ready for distribution. <span>Oh, and it's free.</span></em></h1>
-                <h3><a href="https://scripler.com/ebook/560e67ea031e6a0e29297af0/SofieMarieOttsen-ABook#epubcfi(/6/2[Cover.html]!4[scripler]/1:0)" target="_blank">View an ebook example</a> 
+                <h3><a href="https://scripler.com/ebook/560e67ea031e6a0e29297af0/SofieMarieOttsen-ABook#epubcfi(/6/2[Cover.html]!4[scripler]/1:0)" target="_blank">View a Scripler ebook</a>
                 &emsp;
-                <a href="https://www.youtube.com/watch?v=YcyZPqLfpyA" data-rel="popup-iframe" target="_blank">How to make an ebook in minutes</a></h3>
+                <a href="https://www.youtube.com/watch?v=YcyZPqLfpyA" data-rel="popup-iframe" target="_blank">How to make an ebook</a></h3>
                 <div class="row">
                     <p>&nbsp;</p>
                 </div>
