--- a/public/index.html
+++ b/public/index.html
@@ -117,9 +117,9 @@
             </div>
         </div>
         <div id="socialicons" class="col-xs-12 col-md-2 clearfix">
-            <a class="socialicon" href="auth/facebook"><span class="icon-facebook"></span></a>
-            <a class="socialicon" href="auth/linkedin"><span class="icon-linkedin"></span></a>
-            <a class="socialicon"href="auth/google"><span class="icon-google-plus"></span></a>
+            <a class="socialicon" onClick="socialLogin('facebook')" href="auth/facebook"><span class="icon-facebook"></span></a>
+            <a class="socialicon" onClick="socialLogin('linkedin')" href="auth/linkedin"><span class="icon-linkedin"></span></a>
+            <a class="socialicon" onClick="socialLogin('google')" href="auth/google"><span class="icon-google-plus"></span></a>
         </div>
     </div>
 
@@ -299,9 +299,9 @@
                       <p>&nbsp;</p>
                   </div>
                   <div>
-                      <a class="socialicon" href="auth/facebook"><span class="icon-facebook"></span></a>
-                      <a class="socialicon" href="auth/linkedin"><span class="icon-linkedin"></span></a>
-                      <a class="socialicon"href="auth/google"><span class="icon-google-plus"></span></a>
+                      <a class="socialicon" onClick="socialLogin('facebook')" href="auth/facebook"><span class="icon-facebook"></span></a>
+                      <a class="socialicon" onClick="socialLogin('linkedin')" href="auth/linkedin"><span class="icon-linkedin"></span></a>
+                      <a class="socialicon" onClick="socialLogin('google')" href="auth/google"><span class="icon-google-plus"></span></a>
                   </div>
                 </div>
 
